# OpenCLAndroidExample

./: .gitignore  Makefile  README.md  adb.md  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/openclandroidexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/OpenCL/: OpenCL.lib
app/src/main/java/com/example/openclandroidexample/: MainActivity.java  ResultActivity.java
app/src/main/res/drawable/: ic_error.xml  ic_success.xml
app/src/main/res/layout/: activity_main.xml  activity_result.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openclandroidexample/: ExampleUnitTest.java
build_cli/: CMakeCache.txt  Makefile  cmake_install.cmake  openclandroidexample_cli_arm64
build_cli_desktop/: CMakeCache.txt  Makefile  cmake_install.cmake  openclandroidexample_cli
design/: view1.html  view2.html  view3.html
